--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "deploy-to-git"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
