--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://hahavn94.github.io/create-app-buildpack",
   "name": "training-school-app",
   "version": "0.1.0",
   "private": true,
